--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
-    "iron-input": "PolymerElements/iron-input#~1.0.5"
+    "paper-elements": "PolymerElements/paper-elements#^1.0.0",
+    "iron-icons": "polymerelements/iron-icons#~1.0.3"
   }
 }
